src/css/style.css
/* ... */
.pt-2 {
  padding-top: 0.5rem !important;
}

.mt-3 {
  margin-top: 1rem !important;
}

.pt-3 {
  padding-top: 1rem !important;
}

.mt-4 {
  margin-top: 1.5rem !important;
}

.pt-4 {
  padding-top: 1.5rem !important;
}

.mt-5 {
  margin-top: 3rem !important;
}

.pt-5 {
  padding-top: 3rem !important;
}

.mb-0 {
  margin-bottom: 0rem !important;
}

.pb-0 {
  padding-bottom: 0rem !important;
}

.mb-1 {
  margin-bottom: 0.25rem !important;
}

.pb-1 {
  padding-bottom: 0.25rem !important;
}

.mb-2 {
  margin-bottom: 0.5rem !important;
}

.pb-2 {
  padding-bottom: 0.5rem !important;
}

.mb-3 {
  margin-bottom: 1rem !important;
}

.pb-3 {
  padding-bottom: 1rem !important;
}

.mb-4 {
  margin-bottom: 1.5rem !important;
}

.pb-4 {
  padding-bottom: 1.5rem !important;
}

.mb-5 {
  margin-bottom: 3rem !important;
}

.pb-5 {
  padding-bottom: 3rem !important;
}

.ms-0 {
  margin-left: 0rem !important;
}

.ps-0 {
  padding-left: 0rem !important;
}

.ms-1 {
  margin-left: 0.25rem !important;
}

.ps-1 {
  padding-left: 0.25rem !important;
}

.ms-2 {
  margin-left: 0.5rem !important;
}

.ps-2 {
  padding-left: 0.5rem !important;
}

.ms-3 {
  margin-left: 1rem !important;
}

.ps-3 {
  padding-left: 1rem !important;
}

.ms-4 {
  margin-left: 1.5rem !important;
}

.ps-4 {
  padding-left: 1.5rem !important;
}

.ms-5 {
  margin-left: 3rem !important;
}

.ps-5 {
  padding-left: 3rem !important;
}

.me-0 {
  margin-right: 0rem !important;
}

.pe-0 {
  padding-right: 0rem !important;
}

.me-1 {
  margin-right: 0.25rem !important;
}

.pe-1 {
  padding-right: 0.25rem !important;
}

.me-2 {
  margin-right: 0.5rem !important;
}

.pe-2 {
  padding-right: 0.5rem !important;
}

.me-3 {
  margin-right: 1rem !important;
}

.pe-3 {
  padding-right: 1rem !important;
}

.me-4 {
  margin-right: 1.5rem !important;
}

.pe-4 {
  padding-right: 1.5rem !important;
}

.me-5 {
  margin-right: 3rem !important;
}

.pe-5 {
  padding-right: 3rem !important;
}

.m-0 {
  margin: 0rem !important;
}

.p-0 {
  padding: 0rem !important;
}

.m-1 {
  margin: 0.25rem !important;
}

.p-1 {
  padding: 0.25rem !important;
}

.m-2 {
  margin: 0.5rem !important;
}

.p-2 {
  padding: 0.5rem !important;
}

.m-3 {
  margin: 1rem !important;
}

.p-3 {
  padding: 1rem !important;
}

.m-4 {
  margin: 1.5rem !important;
}

.p-4 {
  padding: 1.5rem !important;
}

.m-5 {
  margin: 3rem !important;
}

.p-5 {
  padding: 3rem !important;
}

.oauth-grp div, .btn, .read-more-btn a, .icon, .flex-image {
  display: flex;
  align-items: center;
  justify-content: center;
}

.center {
  position: absolute !important;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.d-flex {
  display: flex !important;
}

.is-current {
  display: block !important;
}

img {
  max-width: 100%;
  height: auto;
  object-fit: fill;
}

.avatar-grp {
  border: none;
  background-color: unset;
}

.avatar {
  margin-left: auto;
  margin-right: auto;
  border-radius: 50%;
  cursor: pointer;
  display: none;
  transition: src 500ms;
}

.icon {
  width: 33.33%;
}
.icon img {
  max-width: 32px;
}

.proj-image {
  border-radius: inherit;
  justify-content: center;
  align-items: center;
}
.proj-image img {
  border-radius: inherit;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.edu-image {
  width: 16.66%;
  min-width: 48px;
}

.flex-image {
  justify-content: center;
}

@media (max-width: 320px) {
  .avatar {
    width: 100px;
  }
}
@media screen and (min-width: 768px) {
  .proj-image {
    border-radius: 5px;
  }
  .proj-image img {
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
  }
}
.menu-copyright, .page-copyright {
  width: 100%;
  text-align: center;
  padding: 0 0.5rem 0 0.5rem;
  font-size: 12px;
  font-family: "JetBrains Mono", monospace;
}

a {
  text-decoration: none;
  color: #0d6efd;
}
a:hover {
  text-decoration: underline;
}

.header-txt {
  padding: 0.5rem 0;
  font-size: clamp(1.25rem, 1.29rem + 1.07vw, 1.75rem);
  font-family: -apple-system, BlinkMacSystemFont, "Inter", sans-serif;
}

.header-txt-menu, .header-txt-contact {
  padding: 0.5rem;
  font-size: 24px;
  font-family: "JetBrains Mono", monospace;
}

.header-txt-contact {
  color: lightgray;
  text-align: center;
}

.header-txt-proj {
  padding: 0.5rem;
  font-size: 20px;
  font-family: -apple-system, BlinkMacSystemFont, "Inter", sans-serif;
}

.header-txt-blog {
  padding: 0.5rem 0;
  font-size: 20px;
  font-family: "Ubuntu", system-ui, sans-serif;
}

.body-txt-menu, .navbar-txt {
  font-size: 14px;
  font-family: "JetBrains Mono", monospace;
}

.body-txt {
  font-size: clamp(1rem, 0.96rem + 0.18vw, 1.125rem);
  font-family: -apple-system, BlinkMacSystemFont, "Inter", sans-serif;
}

.body-txt-blog {
  font-family: "Ubuntu", system-ui, sans-serif;
  line-height: 1.5;
}

.oauth-txt, .guestbook-txt {
  font-family: -apple-system, BlinkMacSystemFont, "Inter", sans-serif;
  font-size: 12px;
}

.guestbook-txt {
  word-break: break-word;
}

@media (min-width: 576px) {
  .header-txt-blog, .header-txt-proj {
    font-size: 24px;
  }
  .body-txt {
    font-size: 16px;
  }
  .oauth-txt, .guestbook-txt {
    font-size: 16px;
  }
}
hr {
  background: linear-gradient(to right, #fff, #000, #fff);
  height: 1px;
  border: none;
  margin: 2rem 10rem 0 10rem;
}

@media (max-width: 576px) {
  hr {
    margin-left: 10%;
    margin-right: 10%;
  }
}
.btn-skill-grp, .btn-grp {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  row-gap: 0.5rem;
}

#go-back {
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  cursor: pointer;
  text-decoration: none;
  color: black;
}
#go-back:hover {
  font-weight: bold;
}

.btn {
  background-color: #fff;
  box-shadow: 2px 2px 0px rgba(0, 0, 0, 0.25);
  border: 1px solid #cbcbcb;
  opacity: 0.8;
  border-radius: 5px;
}
.btn:hover {
  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
  border: none;
  opacity: 1;
}

.btn-square {
  aspect-ratio: 1;
  width: 2rem;
  cursor: pointer;
}
/* ... */

